add api save log
